--- a/MVC_2_Repository/Views/Unit/Index.cshtml
+++ b/MVC_2_Repository/Views/Unit/Index.cshtml
@@ -2,6 +2,8 @@
 
 @{
     ViewData["Title"] = "Index";
+    Console.WriteLine(@ViewData["SortIconName"]);
+    Console.WriteLine(@ViewData["SortIconDesc"]);
 }
 
 <h1>Index</h1>
@@ -13,10 +15,16 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                <i class="@ViewData["SortIconName"]" arial-hidden="true"></i>
+                <a asp-action="Index" asp-route-sortExpression="@ViewData["SortParamName"]">
+                    @Html.DisplayNameFor(model => model.Name)
+                </a>
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Description)
+                <i class="@ViewData["SortIconDesc"]" arial-hidden="true"></i>
+                <a asp-action="Index" asp-route-sortExpression="@ViewData["SortParamDesc"]">
+                    @Html.DisplayNameFor(model => model.Description)
+                </a>
             </th>
             <th></th>
         </tr>
